--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "editorplus",
   "description": "",
-  "version": "2.0.1",
+  "version": "2.0.3",
   "files": [
     "dist"
   ],
-  "homepage": "https://github.com/casoa/editorplus",
+  "homepage": "https://github.com/editorplus/editorplus",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/casoa/editorplus.git"
+    "url": "https://github.com/editorplus/editorplus.git"
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/casoa/editorplus/issues"
+    "url": "https://github.com/editorplus/editorplus/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.15"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
