--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "editorplus",
+  "name": "@editorplus/editorplus",
   "description": "",
-  "version": "2.0.4",
+  "version": "2.0.6",
   "files": [
     "dist"
   ],
