--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./built",
+    "outDir": "./prebuild",
     "allowJs": true,
     "checkJs": false,
     "newLine": "lf",
