--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "url": "https://github.com/editorplus/editorplus/issues"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.164",
-    "lodash": "^4.17.20",
-    "platform": "^1.3.5",
-    "superagent": "^5.1.0"
+    "@types/lodash": "~4.14.164",
+    "lodash": "~4.17.20",
+    "platform": "~1.3.5",
+    "superagent": "~5.1.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-uglify": "^1.0.2",
-    "lebab": "^3.1.0",
-    "semistandard": "^14.2.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-uglify": "~1.0.2",
+    "lebab": "~3.1.0",
+    "semistandard": "~14.2.0"
   },
   "scripts": {
     "csfix": "semistandard --fix \"{_src,dialogs}/**/*.js\"",
