--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-contrib-copy": "~0.8.2",
     "grunt-contrib-uglify": "~1.0.2",
     "lebab": "~3.1.0",
-    "semistandard": "~14.2.0"
+    "semistandard": "~14.2.0",
+    "typescript": "~5.2.2"
   },
   "scripts": {
     "csfix": "semistandard --fix \"{_src,dialogs}/**/*.js\"",
