--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/lodash": "~4.14.164",
+    "grunt-cli": "^1.4.3",
     "lodash": "~4.17.20",
     "platform": "~1.3.5",
     "superagent": "~5.1.0"
